[package]
name = "ojt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
cookie_store = "0.21.1"
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json", "cookies"] }
reqwest_cookie_store = "0.8.0"
rpassword = "7.3.1"
scraper = "0.24.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
time = "0.3.37"
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.4"

[dev-dependencies]
assert_cmd = "=2.1.1"
predicates = "=3.1.3"
